config/elasticsearch-app.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-cluster
spec:
  serviceName: elasticsearch
  replicas: 3 
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0
        securityContext:
          capabilities:
            add: ["SYS_CHROOT"]
        resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
        ports:
        - containerPort: 9200
          name: rest
          protocol: TCP
        - containerPort: 9300
          name: inter-node
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
      serviceAccount: elastic
      serviceAccountName: elastic
  volumes:
    - name: data-es-cluster-0
      persistentVolumeClaim:
        claimName: data-es-cluster-0
    - name: data-es-cluster-1
      persistentVolumeClaim:
        claimName: data-es-cluster-1
    - name: data-es-cluster-2
      persistentVolumeClaim:
        claimName: data-es-cluster-2
