config/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  selector:
    app: kibana
  ports:
  - name: http
    port: 443
    protocol: TCP
    targetPort: 5601
