config/logstash-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  selector:
    app: logstash
  ports:
  - name: rest
    port: 5000 
    protocol: TCP
    targetPort: 5000
