config/kibana-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: kibana
spec:
  host: kibana.ocp1.sr1.ag1.sp.ibm.local
  port:
    targetPort: http
  to:
    kind: Service
    name: kibana
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
